# cloud-build-spike

./: Dockerfile  README.md  build_docker.sh  cloudbuild.yaml  go-test.sh  pyproject.toml  testsubmit.yaml
src/cloud_build_spike/: hello.py
tests/: test_hello.py
